# Neptune

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  Makefile  PHASE1.md  README.md  pyproject.toml  run-simulator.sh  streaming-data-server.py
.github/: pull_request_template.md
apps/: console.py  incident_console.py
configs/: cerulean.yml  s1_catalog.json
docs/: AgentDemoPitch.md  DATA_SCHEMAS.md  DEVELOPMENT_STAGES.md  PHASE1.md  PROJECT_OVERVIEW.md  SYNTHETIC_DATA_PLAN.md  cerulean_api_guide.py  synthetic_streams.md
neptune-console/: README.md  index.html  package-lock.json  package.json
neptune-console/src/: App.tsx  index.css  types.ts
neptune-console/src/components/: AgentBriefDrawer.tsx  IncidentDetail.tsx  ShipMap.tsx  (+3 more)
src/agent/: __init__.py  briefing.py  model.py  runner.py  schemas.py
src/anomaly/: __init__.py  bloom_detector.py  events.py  hybrid.py  incidents.py  pipeline.py
src/cerulean/: __init__.py  client.py  followup.py
src/common/: pydantic_compat.py
src/ingest/: ship_stream.py
src/report/: __init__.py  json_brief.py
src/satellite/: __init__.py  tasker.py
status/: phase1.yml
tests/: __init__.py  test_agent_runner.py  test_cerulean_client.py  test_cerulean_followup.py  test_event_trigger.py  test_hybrid_scorer.py  test_incident_manager.py  test_pipeline.py  test_tasker.py
tests/data/: cerulean_slicks.json  sample_event.json
tools/: generate_agent_brief.py  load_env.py  plot_hybrid_alerts.py  plot_seaowl.py  run_agent.py  run_event_trigger.py  run_incident_pipeline.py  sim_ecofl.py  sim_seaowl.py  status.py  sync_phase1.py
(+1 files in other folders)
