[project]
name = "neptune-phase1"
version = "0.1.0"
description = "Phase 1 MVP tooling and docs for Neptune"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "pyyaml>=6.0.1",
  "asf-search>=7.0.4",
  "pre-commit>=3.7.0",
  "pandas>=2.2.0",
  "pyarrow>=15.0.0",
  "matplotlib>=3.8.0",
  "pydantic>=2.7.0"
]

[tool.uv]
dev-dependencies = []
